# OpenCharAI

./: README.md  pyproject.toml
OpenCharAI/: client.py
OpenCharAI/methods/: chat.py  utils.py
PyCharacterAI/methods/: account.py
PyCharacterAI/types/: chat.py
docs/: getting_started.md  models.md  welcome.md
docs/api_reference/: methods.md  types.md
docs/api_reference/methods/: account.md  character.md  chat.md  user.md  utils.md
docs/api_reference/types/: character.md  chat.md  media.md  message.md  user.md
docs/examples/: simple_example.py  simple_example_streaming.py  simple_example_with_model.py
