[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["/.*", "/docs", "/tests"]

[project]
name = "OpenCharAI"
version = "2.2.52"
description = "An unofficial asynchronous API wrapper for Character AI, forked from PyCharacterAI."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

authors = [{ name = "Zectxr" }]

maintainers = [{ name = "Zectxr" }]

keywords = [
    "characterai",
    "character",
    "cai",
    "ai",
    "api",
    "wrapper",
    "asyncio",
    "opencharai",
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = ["curl-cffi>=0.15.0"]

[project.urls]
Homepage = "https://github.com/Zectxr/OpenCharAI"
Documentation = "https://github.com/Zectxr/OpenCharAI/blob/main/docs/welcome.md"
Repository = "https://github.com/Zectxr/OpenCharAI.git"
Issues = "https://github.com/Zectxr/OpenCharAI/issues"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
ignore = ["E501"]

[tool.uv.workspace]
members = ["tests"]
